--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <section class="section">
-        <div class="snake">
-        </div>
+        <!-- <div class="snake">
+            <span class="block"></span>
+        </div> -->
     </section>
 
     <script src="js/script.js"></script>
